--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
         "@types/multer": "^1.4.12",
         "@types/papaparse": "^5.3.16",
         "@types/qrcode": "^1.5.5",
-        "axios": "^1.9.0",
+        "@vitejs/plugin-react": "^4.3.2",
+        "axios": "^1.13.2",
         "bcrypt": "^6.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -76,6 +77,7 @@
         "drizzle-orm": "^0.39.1",
         "drizzle-zod": "^0.7.0",
         "embla-carousel-react": "^8.6.0",
+        "esbuild": "^0.25.0",
         "exceljs": "^4.4.0",
         "express": "^4.21.2",
         "express-session": "^1.18.1",
@@ -113,16 +115,14 @@
         "tailwindcss-animate": "^1.0.7",
         "tw-animate-css": "^1.2.5",
         "vaul": "^1.1.2",
+        "vite": "^5.4.14",
         "vite-plugin-pwa": "^1.0.0",
         "workbox-window": "^7.3.0",
         "wouter": "^3.3.5",
         "ws": "^8.18.0",
         "xlsx": "^0.18.5",
         "zod": "^3.24.2",
-        "zod-validation-error": "^3.4.0",
-        "@vitejs/plugin-react": "^4.3.2",
-        "vite": "^5.4.14",
-        "esbuild": "^0.25.0"
+        "zod-validation-error": "^3.4.0"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.15",
